--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
-mod_version = beta-0.1.2-1.19.2-fabric
+mod_version = 0.1.3-beta-1.19.2-fabric
 maven_group = org.subtoqz
 archives_base_name = auto-place-phantom-blocks
 
