--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-# gradle
-.gradle/
+.gitingore
+
+# eclipse
+
+*.launch
 
 # idea
 
@@ -11,3 +14,10 @@
 # fabric
 
 run/
+
+# java
+
+hs_err_*.log
+replay_*.log
+*.hprof
+*.jfr
